// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`chart builders — caracterização da saída > advancedCharts.buildFunnelSeries 1`] = `
{
  "series": [
    {
      "bottom": 60,
      "data": [
        {
          "name": "A",
          "value": 10,
        },
        {
          "name": "B",
          "value": 20,
        },
        {
          "name": "C",
          "value": 30,
        },
      ],
      "emphasis": {
        "label": {
          "fontSize": 22,
        },
      },
      "gap": 2,
      "itemStyle": {
        "borderColor": "whitesmoke",
        "borderWidth": 1,
        "opacity": 0.7,
      },
      "label": {
        "fontFamily": "Inter",
        "fontSize": 11,
        "position": "inside",
        "show": true,
      },
      "left": "10%",
      "max": 1000,
      "maxSize": "100%",
      "min": 0,
      "minSize": "0%",
      "name": "Funnel",
      "sort": "descending",
      "top": 60,
      "type": "funnel",
      "width": "80%",
    },
  ],
}
`;

exports[`chart builders — caracterização da saída > advancedCharts.buildGaugeSeries 1`] = `
{
  "series": [
    {
      "axisLabel": {
        "show": false,
      },
      "axisLine": {
        "lineStyle": {
          "color": [
            [
              1,
              "silver",
            ],
          ],
          "opacity": 0.05,
          "width": 14,
        },
      },
      "axisTick": {
        "show": false,
      },
      "data": [
        {
          "value": 30,
        },
      ],
      "detail": {
        "color": "navy",
        "fontFamily": "Georgia",
        "fontSize": 11,
        "fontWeight": "900",
        "formatter": "{value}%",
        "offsetCenter": [
          0,
          0,
        ],
        "valueAnimation": true,
      },
      "endAngle": -30,
      "max": 100,
      "min": 0,
      "pointer": {
        "show": false,
      },
      "progress": {
        "itemStyle": {
          "color": LinearGradient {
            "colorStops": [
              {
                "color": "cornflowerblue",
                "offset": 0,
              },
              {
                "color": "darkorchid",
                "offset": 1,
              },
            ],
            "global": false,
            "type": "linear",
            "x": 0,
            "x2": 1,
            "y": 0,
            "y2": 0,
          },
        },
        "show": true,
        "width": 14,
      },
      "splitLine": {
        "show": false,
      },
      "startAngle": 210,
      "type": "gauge",
    },
  ],
}
`;

exports[`chart builders — caracterização da saída > advancedCharts.buildHeatmapSeries 1`] = `
{
  "series": [
    {
      "data": [
        [
          0,
          0,
          10,
        ],
        [
          1,
          0,
          20,
        ],
        [
          2,
          0,
          30,
        ],
      ],
      "emphasis": {
        "itemStyle": {
          "shadowBlur": 10,
          "shadowColor": "cornflowerblue",
        },
      },
      "label": {
        "show": false,
      },
      "type": "heatmap",
    },
  ],
  "visualMap": {
    "bottom": "0%",
    "calculable": true,
    "inRange": {
      "color": [
        "whitesmoke",
        "cornflowerblue",
        "crimson",
      ],
    },
    "left": "center",
    "max": 1000,
    "min": 0,
    "orient": "horizontal",
    "show": false,
  },
}
`;

exports[`chart builders — caracterização da saída > advancedCharts.buildRadarConfig 1`] = `
{
  "radar": {
    "axisLine": {
      "lineStyle": {
        "color": "silver",
        "opacity": 0.05,
      },
    },
    "indicator": [
      {
        "max": 1000,
        "name": "A",
      },
      {
        "max": 1000,
        "name": "B",
      },
      {
        "max": 1000,
        "name": "C",
      },
    ],
    "splitArea": {
      "show": false,
    },
    "splitLine": {
      "lineStyle": {
        "color": "silver",
        "opacity": 0.05,
      },
    },
  },
  "series": [
    {
      "data": [
        {
          "areaStyle": {
            "color": RadialGradient {
              "colorStops": [
                {
                  "color": "cornflowerblue",
                  "offset": 0,
                },
                {
                  "color": "darkorchid",
                  "offset": 1,
                },
              ],
              "global": false,
              "r": 1,
              "type": "radial",
              "x": 0.5,
              "y": 0.5,
            },
            "opacity": 0.6,
          },
          "lineStyle": {
            "color": "cornflowerblue",
            "width": 2,
          },
          "name": "Métrica",
          "symbol": "none",
          "value": [
            10,
            20,
            30,
          ],
        },
      ],
      "type": "radar",
    },
  ],
}
`;

exports[`chart builders — caracterização da saída > advancedCharts.buildSunburstSeries 1`] = `
{
  "series": [
    {
      "data": [
        {
          "children": undefined,
          "name": "A",
          "value": 10,
        },
        {
          "children": undefined,
          "name": "B",
          "value": 20,
        },
        {
          "children": undefined,
          "name": "C",
          "value": 30,
        },
      ],
      "label": {
        "fontFamily": "Inter",
        "fontSize": 11,
        "rotate": "radial",
      },
      "radius": [
        0,
        "90%",
      ],
      "type": "sunburst",
    },
  ],
}
`;

exports[`chart builders — caracterização da saída > advancedCharts.buildTreeMapSeries 1`] = `
{
  "series": [
    {
      "data": [
        {
          "name": "A",
          "value": 10,
        },
        {
          "name": "B",
          "value": 20,
        },
        {
          "name": "C",
          "value": 30,
        },
      ],
      "itemStyle": {
        "borderColor": "whitesmoke",
        "borderWidth": 1,
        "gapWidth": 1,
      },
      "label": {
        "fontFamily": "Inter",
        "fontSize": 11,
        "formatter": "{b}",
        "show": true,
      },
      "name": "TreeMap",
      "type": "treemap",
      "upperLabel": {
        "height": 20,
        "show": true,
      },
      "visibleMin": 300,
    },
  ],
}
`;

exports[`chart builders — caracterização da saída > basicCharts.buildBarSeries 1`] = `
{
  "series": [
    {
      "barWidth": "40%",
      "data": [
        10,
        20,
        30,
      ],
      "emphasis": {
        "itemStyle": {
          "color": LinearGradient {
            "colorStops": [
              {
                "color": "cornflowerblue",
                "offset": 0,
              },
              {
                "color": "darkorchid",
                "offset": 1,
              },
            ],
            "global": false,
            "type": "linear",
            "x": 0,
            "x2": 0,
            "y": 0,
            "y2": 1,
          },
          "shadowBlur": 20,
          "shadowColor": "cornflowerblue",
        },
      },
      "itemStyle": {
        "borderRadius": [
          10,
          10,
          2,
          2,
        ],
        "color": LinearGradient {
          "colorStops": [
            {
              "color": "cornflowerblue",
              "offset": 0,
            },
            {
              "color": "darkorchid",
              "offset": 1,
            },
          ],
          "global": false,
          "type": "linear",
          "x": 0,
          "x2": 0,
          "y": 0,
          "y2": 1,
        },
        "opacity": 0.9,
      },
      "type": "bar",
    },
  ],
}
`;

exports[`chart builders — caracterização da saída > basicCharts.buildLineSeries (area) 1`] = `
{
  "series": [
    {
      "areaStyle": {
        "color": LinearGradient {
          "colorStops": [
            {
              "color": "cornflowerblue",
              "offset": 0,
            },
            {
              "color": "cornflowerblue",
              "offset": 0.5,
            },
            {
              "color": "darkorchid",
              "offset": 1,
            },
          ],
          "global": false,
          "type": "linear",
          "x": 0,
          "x2": 0,
          "y": 0,
          "y2": 1,
        },
        "opacity": 0.2,
      },
      "data": [
        10,
        20,
        30,
      ],
      "emphasis": {
        "itemStyle": {
          "shadowBlur": 15,
          "shadowColor": "cornflowerblue",
        },
        "scale": 1.5,
      },
      "itemStyle": {
        "borderColor": "whitesmoke",
        "borderWidth": 1,
        "color": "cornflowerblue",
        "shadowBlur": 5,
        "shadowColor": "cornflowerblue",
      },
      "lineStyle": {
        "color": "cornflowerblue",
        "shadowBlur": 15,
        "shadowColor": "cornflowerblue",
        "shadowOffsetY": 8,
        "width": 2,
      },
      "smooth": 0.4,
      "symbol": "circle",
      "symbolSize": 10,
      "type": "line",
    },
  ],
}
`;

exports[`chart builders — caracterização da saída > basicCharts.buildLineSeries (line) 1`] = `
{
  "series": [
    {
      "areaStyle": undefined,
      "data": [
        10,
        20,
        30,
      ],
      "emphasis": {
        "itemStyle": {
          "shadowBlur": 15,
          "shadowColor": "cornflowerblue",
        },
        "scale": 1.5,
      },
      "itemStyle": {
        "borderColor": "whitesmoke",
        "borderWidth": 1,
        "color": "cornflowerblue",
        "shadowBlur": 5,
        "shadowColor": "cornflowerblue",
      },
      "lineStyle": {
        "color": "cornflowerblue",
        "shadowBlur": 15,
        "shadowColor": "cornflowerblue",
        "shadowOffsetY": 8,
        "width": 2,
      },
      "smooth": 0.4,
      "symbol": "circle",
      "symbolSize": 10,
      "type": "line",
    },
  ],
}
`;

exports[`chart builders — caracterização da saída > basicCharts.buildPieSeries 1`] = `
{
  "series": [
    {
      "avoidLabelOverlap": true,
      "data": [
        {
          "name": "A",
          "value": 10,
        },
        {
          "name": "B",
          "value": 20,
        },
        {
          "name": "C",
          "value": 30,
        },
      ],
      "emphasis": {
        "itemStyle": {
          "shadowBlur": 20,
          "shadowColor": "cornflowerblue",
        },
        "label": {
          "color": "navy",
          "fontFamily": "Georgia",
          "fontSize": 11,
          "fontWeight": "bold",
          "show": true,
        },
      },
      "itemStyle": {
        "borderColor": "whitesmoke",
        "borderRadius": 8,
        "borderWidth": 1,
      },
      "label": {
        "position": "center",
        "show": false,
      },
      "name": "Distribuição",
      "radius": [
        "55%",
        "85%",
      ],
      "type": "pie",
    },
  ],
}
`;

exports[`chart builders — caracterização da saída > statisticalCharts.buildCandlestickSeries 1`] = `
{
  "series": [
    {
      "data": [
        [
          98,
          105,
          95,
          108,
        ],
        [
          105,
          109,
          101,
          112,
        ],
        [
          109,
          107,
          103,
          116,
        ],
      ],
      "itemStyle": {
        "borderColor": "cornflowerblue",
        "borderColor0": "crimson",
        "color": "cornflowerblue",
        "color0": "crimson",
      },
      "type": "candlestick",
    },
  ],
  "xAxis": {
    "data": [
      "A",
      "B",
      "C",
    ],
  },
}
`;

exports[`chart builders — caracterização da saída > statisticalCharts.buildHistogramSeries 1`] = `
{
  "series": [
    {
      "barWidth": "99%",
      "data": [
        10,
        20,
        30,
      ],
      "itemStyle": {
        "borderColor": "cornflowerblue",
        "borderWidth": 1,
        "color": "cornflowerblue",
        "opacity": 0.6,
      },
      "name": "Histogram",
      "type": "bar",
    },
  ],
}
`;

exports[`chart builders — caracterização da saída > statisticalCharts.buildScatterSeries 1`] = `
{
  "series": [
    {
      "data": [
        [
          0,
          10,
        ],
        [
          1,
          20,
        ],
        [
          2,
          30,
        ],
      ],
      "itemStyle": {
        "color": RadialGradient {
          "colorStops": [
            {
              "color": "cornflowerblue",
              "offset": 0,
            },
            {
              "color": "darkorchid",
              "offset": 1,
            },
          ],
          "global": false,
          "r": 1,
          "type": "radial",
          "x": 0.4,
          "y": 0.3,
        },
        "opacity": 0.7,
        "shadowBlur": 10,
        "shadowColor": "cornflowerblue",
      },
      "symbolSize": [Function],
      "type": "scatter",
    },
  ],
}
`;

exports[`validação de construtores estatísticos > statisticalCharts.buildBoxPlotSeries 1`] = `
{
  "series": [
    {
      "data": [],
      "itemStyle": {
        "borderColor": "cornflowerblue",
        "borderWidth": 2,
        "color": "cornflowerblue",
        "opacity": 0.2,
      },
      "type": "boxplot",
    },
  ],
}
`;
